# boring-rs

./: .gitignore  Cargo.toml  README.md  spec.md
app/: Cargo.toml
app/src/: main.rs
boring-file/: Cargo.toml
boring-file/src/: reader.rs  writer.rs
boring-parser/: Cargo.toml
boring-parser/src/: boring_structs_110.rs  boring_structs_200.rs  boring_structs_210.rs  boring_structs_300.rs  boring_structs_400.rs  coordinate.rs  lib.rs  parser.rs  transform.rs  types.rs
boring-rs/: Cargo.toml
boring-rs/src/: main.rs
docs/dtd/: BED0110.DTD  BED0110.XML  BED0210.XML  BED0300.XML  BED0400.XML
file/: Cargo.toml
parser/: Cargo.toml
parser/src/: boring_structs_110.rs  error.rs
