[workspace]
members = ["boring-rs", "boring-parser", "boring-file"]
resolver = "3"

[workspace.package]
authors = ["Haruto sasaki<muromisann6633@gmail.com>"]
description = "A Rust library for boring xml parsing"
license = "MIT"
repository = "https://github.com/groovyjovy/boring-rs"
readme = "./README.md"
edition = "2024"
version = "0.3.0"
