[package]
name = "boring-rs"
version = "0.1.0"
edition = "2024"
authors = ["Haruto sasaki<muromisann6633@gmail.com>"]
description = "A Rust library for boring xml parsing"
license = "MIT"
repository = "https://github.com/groovyjovy/boring-rs"
readme = "../README.md"

[dependencies]
file = { version = "0.1.0", path = "../file" }
parser = { version = "0.1.0", path = "../parser" }
