[package]
name = "boring-file"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
encoding_rs = "0.8"
serde = "1.0"
serde_json = "1.0"
