[package]
name = "boring-parser"
version = "0.1.0"
edition = "2024"
authors = ["Haruto sasaki <muromisann6633@gmail.com>"]
description = "A Rust library for parsing XML files"
license = "MIT"

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
