[package]
name = "boring-parser"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
proj = "0.28"
jgdtrans = "=0.3.1"
encoding_rs = "0.8"
