[package]
name = "boring-rs"
version = "0.1.0"
edition = "2024"
authors = ["Haruto sasaki<muromisann6633@gmail.com>"]
description = "A Rust library for boring xml parsing"
license = "MIT"
repository = "https://github.com/groovyjovy/boring-rs"
readme = "../README.md"

[dependencies]
boring-file = { version = "0.1.0", path = "../boring-file" }
boring-parser = { version = "0.1.0", path = "../boring-parser" }
