[package]
name = "boring-rs"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
boring-file = { version = "0.3.0", path = "../boring-file" }
boring-parser = { version = "0.3.0", path = "../boring-parser" }
